# my-tensor

./: .clang-format  .cpplintrc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Doxyfile  LICENSE  MANIFEST.in  README.md  example.json  main.cpp  pyproject.toml  set_pwd.lua  setup.py  xmake.lua
examples/: cifar-10.json  imagenet.json  mnist.json
hooks/: pre-commit
include/: accuracy.hpp  adamw-solver.hpp  batchnorm.hpp  blas.cuh  blas.hpp  common.hpp  conv.cuh  conv.hpp  cuda-context.hpp  data-loader.cuh  data-loader.hpp  data-parameter.hpp  dataset.h  dataset.hpp  error.h  error.hpp  filler-parameter.hpp  filler.cuh  filler.hpp  flatten.cuh  flatten.hpp  handle.cuh  handle.hpp  im2col.cuh  im2col.hpp  json-loader.h  json-loader.hpp  json-utils.hpp  layer-factory.cuh  layer-factory.hpp  layer-parameter.cuh  layer-parameter.h  layer-parameter.hpp  layer.cuh  layer.hpp  linear.cuh  linear.hpp  loss-with-softmax.cuh  loss-with-softmax.hpp  memory-util.hpp  (+26 more)
python/: layer-facade.cu  layer-facade.cuh  layer-facade.hpp  layer-pybind.cu  tensor-facade.cu  tensor-facade.cuh  tensor-facade.hpp  tensor-pybind.cu
scripts/: download_cifar10.sh  download_mnist.sh  run_cifar10.sh  run_mnist.sh
src/: accuracy.cc  accuracy.cu  adamw-solver.cc  batchnorm.cc  batchnorm.cu  blas.cc  blas.cu  common.cc  common.cu  conv.cc  conv.cu  cuda-context.cu  data-loader.cc  data-loader.cu  dataset.cc  filler.cc  filler.cu  flatten.cc  flatten.cu  handle.cu  im2col.cc  im2col.cu  json-loader.cc  layer-parameter.cc  layer-parameter.cu  layer.cc  layer.cu  linear.cc  linear.cu  loss-with-softmax.cc  loss-with-softmax.cu  main.cc  memory-util.cu  mnist.cc  mnist.cu  model-saver.cc  net.cc  pooling.cc  pooling.cu  relu.cc  (+13 more)
test/: accuracy-test.cc  accuracy-test.cu  batchnorm-test.cc  blas-test.cc  blas-test.cu  conv-test.cc  conv-test.cu  im2col-test.cc  im2col-test.cu  json-loader-test.cc  layer-test.cu  linear-test.cc  linear-test.cu  loss-with-softmax-test.cc  loss-with-softmax-test.cu  pooling-test.cc  pooling-test.cu  relu-test.cc  relu-test.cu  sigmoid-test.cc  sigmoid-test.cu  softmax-test.cc  softmax-test.cu  sum-test.cu  tensor-test.cc  tensor-test.cu
test/include/: test-utils.cuh
test/include/layer/: layer-utils.cuh  layer-utils.hpp
test/include/tensor/: tensor-utils.cuh  tensor-utils.hpp
test/json-test/: accuracy.json  batchnorm.json  cifar-10.json  conv.json  example.json  linear.json  loss-with-softmax.json  mnist.json  pooling.json  relu.json  sigmoid.json  softmax.json  unimplemented.json  without-name.json  without-type.json
test/python/: conv-test.py  cross-entropy-loss-test.py  dataset-test.py  linear-test.py  pooling-test.py  relu-test.py  sigmoid-test.py  softmax-test.py  tensor-test.py
